# ros-comm-experiment

./: experiment_report.md
desktop/mav_teleop/: CMakeLists.txt  package.xml
desktop/mav_teleop/launch/: sony_dualshock3.launch  sony_dualshock3_motor.launch
desktop/mav_teleop/src/: mav_teleop.cpp  sailboatmotor_teleop.cpp  teleop_remap.cpp
rasp/mavros_teleop/: CMakeLists.txt  package.xml
rasp/mavros_teleop/launch/: joystick.launch  logitech_gamepad.launch  ship_console.launch  sony_dualshock3.launch  teleop_mavros.launch
rasp/mavros_teleop/src/: mavros_teleop.cpp  teleop_remap.cpp
