<package>
  <name>mavros_teleop</name>
  <version>0.3.5</version>
  <description>mavros_teleop enables sailboat control with a joystick by
     processing joy/Joy messages and translating them to joint msgs.</description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_quadrotor_teleop</url>

  <author email="davihenriqueds@gmail.com">Davi Henrique</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>


</package>
